--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.3",
+    "https": "^1.0.0",
     "telnet-client": "^1.4.9"
   }
 }
